--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,13 @@
 {
   "dependencies": {
     "express": "^4.18.2",
+    "nodemon": "^3.0.1",
     "ytdl-core": "^4.11.5"
   },
   "name": "backend",
   "version": "1.0.0",
   "description": "API donwload video youtube",
-  "main": "index.js",
-  "devDependencies": {},
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
