--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
     "express": "^4.18.2",
+    "node-sass": "^9.0.0",
     "nodemon": "^3.0.1",
+    "pug": "^3.0.2",
+    "sass": "^1.69.5",
     "ytdl-core": "^4.11.5"
   },
   "name": "backend",
@@ -21,5 +24,13 @@
   "bugs": {
     "url": "https://github.com/juan436/Donwload-video-youtube/issues"
   },
-  "homepage": "https://github.com/juan436/Donwload-video-youtube#readme"
+  "homepage": "https://github.com/juan436/Donwload-video-youtube#readme",
+  "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "browser-sync": "^2.29.3",
+    "gulp": "^4.0.2",
+    "gulp-postcss": "^9.0.1",
+    "gulp-pug": "^5.0.0",
+    "gulp-sass": "^5.1.0"
+  }
 }
